; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/magnetometer/extr_bmc150_magn.c_bmc150_magn_trig_try_reen.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/magnetometer/extr_bmc150_magn.c_bmc150_magn_trig_try_reen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iio_trigger = type { i32 }
%struct.iio_dev = type { i32 }
%struct.bmc150_magn_data = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.iio_trigger*)* @bmc150_magn_trig_try_reen to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bmc150_magn_trig_try_reen(%struct.iio_trigger* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.iio_trigger*, align 8
  %4 = alloca %struct.iio_dev*, align 8
  %5 = alloca %struct.bmc150_magn_data*, align 8
  %6 = alloca i32, align 4
  store %struct.iio_trigger* %0, %struct.iio_trigger** %3, align 8
  %7 = load %struct.iio_trigger*, %struct.iio_trigger** %3, align 8
  %8 = call %struct.iio_dev* @iio_trigger_get_drvdata(%struct.iio_trigger* %7)
  store %struct.iio_dev* %8, %struct.iio_dev** %4, align 8
  %9 = load %struct.iio_dev*, %struct.iio_dev** %4, align 8
  %10 = call %struct.bmc150_magn_data* @iio_priv(%struct.iio_dev* %9)
  store %struct.bmc150_magn_data* %10, %struct.bmc150_magn_data** %5, align 8
  %11 = load %struct.bmc150_magn_data*, %struct.bmc150_magn_data** %5, align 8
  %12 = getelementptr inbounds %struct.bmc150_magn_data, %struct.bmc150_magn_data* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %16, label %15

15:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %26

16:                                               ; preds = %1
  %17 = load %struct.bmc150_magn_data*, %struct.bmc150_magn_data** %5, align 8
  %18 = getelementptr inbounds %struct.bmc150_magn_data, %struct.bmc150_magn_data* %17, i32 0, i32 0
  %19 = call i32 @mutex_lock(i32* %18)
  %20 = load %struct.bmc150_magn_data*, %struct.bmc150_magn_data** %5, align 8
  %21 = call i32 @bmc150_magn_reset_intr(%struct.bmc150_magn_data* %20)
  store i32 %21, i32* %6, align 4
  %22 = load %struct.bmc150_magn_data*, %struct.bmc150_magn_data** %5, align 8
  %23 = getelementptr inbounds %struct.bmc150_magn_data, %struct.bmc150_magn_data* %22, i32 0, i32 0
  %24 = call i32 @mutex_unlock(i32* %23)
  %25 = load i32, i32* %6, align 4
  store i32 %25, i32* %2, align 4
  br label %26

26:                                               ; preds = %16, %15
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}

declare dso_local %struct.iio_dev* @iio_trigger_get_drvdata(%struct.iio_trigger*) #1

declare dso_local %struct.bmc150_magn_data* @iio_priv(%struct.iio_dev*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @bmc150_magn_reset_intr(%struct.bmc150_magn_data*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
